+refs to patents on artificial diels

--- a/theory.tex
+++ b/theory.tex
@@ -1,8 +1,3 @@
-%% Things that need fixing:
-% sign of imag part in Lorentz osc
-% courant factor S -> s, and put into symbols table
-% 
-
 %% Things to be optionally fixed:
 %% *  fix that f is used as frequency (replace with omega) and also as arbitrary function f(t) 
 %% *  get rid of the term "response function" for susceptibility
@@ -1096,6 +1091,8 @@ Embedding one layer different from others, a \textit{defect}, into the middle of
 %}}}
 \paragraph{Photonic crystals}%{{{ ============================= find 1 cite "phc"
 The success in prohibiting the light to propagate along one direction inspired the design of two- and three-dimensional \textit{photonic crystals}, named in analogy with the band gaps for the electron wave in natural crystals. A nontrivial accomplishment of manufacturing the first three-dimensional structure with a delimited range of frequencies for which there exists no propagating wave in any direction, a \textit{complete band gap}, is attributed to Yablonovitch \cite{yablonovitch1987} in 1987.
+% this can be made using X-ray litography   https://www.google.com.ar/patents/US6875544
+% another structure depicted in patent from 1994: https://www.google.com.ar/patents/US5335240
 
 The structure, known as \textit{yablonovite}, was designed for microwaves, since it was made by precise mechanical drilling into a plastic cube. Different technologies were developed in 1990s in attempts to efficiently fabricate photonic crystals operating in the optical range, such as stacking of structured layers, direct laser writing in a resin,  self-assembly of dielectric spheres into opal-like structures etc. 
 
@@ -1201,6 +1198,12 @@ Subwavelength wire arrays have been experimentally used, at least, since 1898 as
 
 Periodic structures denoted as \textit{artificial dielectrics} \cite{brown1955properties} found their use in the 1940s to engineer the broad-band permittivity tensor for the applications in lightweight lenses for microwave frequencies \cite{kock1948metallic}. They were still operated in the static limit below any resonance. Usually the particles consisted of hollow metal waveguides or spheres/disks which increased or reduced the wave phase velocity, respectively. 
 
+%Lightbowne		1969 https://www.google.com/patents/US3430248			Artificial dielectric material for use in microwave optics
+%Wickersham		1960 http://www.google.com/patents/US2921312			Artificial dielectric polarizer
+%John, McKay	1975 http://www.google.com/patents/US3886558			Artificial dielectric material for controlling antennae patterns
+%Hannan			1966 http://www.google.com.py/patents/US3254345			Artificial dielectric using interspersed rods
+%Wickersham		1966 https://www.google.com.ar/patents/US3089142		Artificial dielectric polarizer
+%Anderson		1967 http://google.ru/patents/US3329958					Artificial dielectric lens structure
 %}}}
 
 \subsection{First unification: metamaterials with uncommon parameters} 
