--- a/defs.tex
+++ b/defs.tex
@@ -34,6 +34,7 @@
 \newcommand{\avb}{{\mathbf{a_2}}}
 \newcommand{\avc}{{\mathbf{a_3}}}
 \newcommand{\avabc}{{\mathbf{a_{1,2,3}}}}
+\newcommand{\cour}{s}
 
 
 \newcommand{\add}[1]{\color{blue}#1\color{black}{}}
