--- a/t.tex
+++ b/t.tex
@@ -1,6 +1,7 @@
 \documentclass[letterpaper,12pt]{report}
 \usepackage[utf8]{inputenc} 
-\usepackage[top=2.cm, bottom=2cm, left=2cm, right=2cm]{geometry} 
+%\usepackage[top=2.cm, bottom=2cm, left=2cm, right=2cm]{geometry} 
+\usepackage[top=3cm, bottom=3cm, left=2.5cm, right=2.5cm]{geometry} 
 \usepackage{mathrsfs} 
 \usepackage{palatino} 
 \usepackage[font=it]{caption}
