--- a/theory.tex
+++ b/theory.tex
@@ -1,13 +1,11 @@
 %% Things to be optionally fixed:
 %% *  fix that f is used as frequency (replace with omega) and also as arbitrary function f(t) 
-%% *  get rid of the term "response function" for susceptibility
 %% *  ensure more consistent usage of "dispersion curve", "dispersion relation" and "solution of Maxwell equations"
 % TODO 2015-01-23: 
 % 1) note that zero PBG width = dirac point = zero effective photon mass 
 % 2) investigate how mode anticrossing relates to the significant spatial dispersion
 % 3) find out why in effparam.py the data need to be conjugated, when MEEP seems to use the exp(-iwt) convention
 % 4) possibly write into the numeric.tex about using the Debye model, with a scan for the damping coefficient (0.1 omega0 ... 100 omega0)
-%  * 'to that' -> 'to the fact that'
 
 \section{Electrodynamics of local homogeneous media} %{{{
 \subsection{Electromagnetic wave in vacuum}
@@ -106,7 +104,7 @@ In general, the function $\epsrl(\omega)$ is complex to account for possible pha
 Let us note that the definition of the Fourier transform is never subject to the sign change, even when the convention of $e^{\ii \omega t}$ is exchanged for $e^{-\ii \omega t}$.
 %}}}
 \paragraph{Response of a harmonic oscillator} \label{chap_lorentzmedia} %{{{
-\begin{figure}[t] \caption{\textbf{a)} Illustration of how a simplified medium respond to an electric field impulse in the shape of Dirac delta function  $E(t) = \delta(t)$. The response is composed from an instantaneous part from vacuum, $\delta(t)$, and from a delayed ringdown of one damped harmonic oscillator, described by $\chi_e(t) := 2\pi \sin(2\pi t)\,e^{-x/2}$; \textbf{b)} The corresponding local permittivity $\epsrl(\omega)$, computed by Fourier transform of the response. Note that the imaginary part of permittivity is negative due to that the material is lossy (absorbs energy) and that the $e^{\ii\omega t}$ convention is used.} \label{fg_oscillator_spectrum} \centering 
+\begin{figure}[t] \caption{\textbf{a)} Illustration of how a simplified medium respond to an electric field impulse in the shape of Dirac delta function  $E(t) = \delta(t)$. The response is composed from an instantaneous part from vacuum, $\delta(t)$, and from a delayed ringdown of one damped harmonic oscillator, described by $\chi_e(t) := 2\pi \sin(2\pi t)\,e^{-x/2}$; \textbf{b)} The corresponding local permittivity $\epsrl(\omega)$, computed by Fourier transform of the response. Note that the imaginary part of permittivity is negative due to the fact that the material is lossy (absorbs energy) and that the $e^{\ii\omega t}$ convention is used.} \label{fg_oscillator_spectrum} \centering 
 	\includegraphics[width=\textwidth]{img/oscillator_spectrum.pdf}
 \end{figure}
 The response function $\chi_e(T, \mathbf{R})$ of usual media is composed of different phenomena.  Each of them may react on a different time scale, thus the response of the medium usually has a relatively complicated shape in the time domain.  However, to a reasonable degree of approximation, each of the contributions can be treated separately, as is demonstrated in the following.
